--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "webgraph-rs"
+name = "webgraph"
 version = "0.1.0"
 edition = "2021"
 description = "A Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
