--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ license = "Apache-2.0 OR LGPL-2.1-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.70"
