--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    env:
+      RUSTFLAGS: "-Zrandomize-layout"
+      MIRIFLAGS: "-Zmiri-symbolic-alignment-check -Zmiri-check-number-validity -Zmiri-tag-raw-pointers"
     steps:
     - uses: actions/checkout@v3
     - name: Build
@@ -27,5 +29,7 @@ jobs:
         rustup toolchain install nightly --component miri
         rustup override set nightly
         cargo miri setup
-    - name: Test with Miri
-      run: cargo miri test
+    - name: Test with Miri in little endian
+      run: cargo miri test --target x86_64-unknown-linux-gnu
+    - name: Test with Miri in big endian
+      run: cargo miri test --target mips64-unknown-linux-gnuabi64 
