--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,21 +11,22 @@ env:
 
 jobs:
   build:
-
+    env:
+      RUSTFLAGS: "-Zsanitizer=address"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Run clippy
-      run: cargo clippy -- -Dclippy::all -Dclippy::cargo
     - name: Install Miri
       run: |
         rustup toolchain install nightly --component miri
         rustup override set nightly
         cargo miri setup
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose -Zbuild-std --target x86_64-unknown-linux-gnu
+    - name: Run clippy
+      run: cargo clippy -- -Dclippy::all -Dclippy::cargo
     - name: Test with Miri in little endian
       run: cargo miri test --target x86_64-unknown-linux-gnu
       env:
