--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Miri
       run: |
-        rustup toolchain install nightly --component miri
+        rustup toolchain install nightly --component miri clippy
         rustup override set nightly
         cargo miri setup
     - name: Build
