--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -22,13 +22,19 @@ members = ["."]
 debug = 1
 
 [[bin]]
-name = "mem_word_reader"
-path = "fuzz_targets/mem_word_reader.rs"
+name = "mem_word_read"
+path = "fuzz_targets/mem_word_read.rs"
 test = false
 doc = false
 
 [[bin]]
-name = "buffered_bit_stream_reader"
-path = "fuzz_targets/buffered_bit_stream_reader.rs"
+name = "buffered_bit_stream_read"
+path = "fuzz_targets/buffered_bit_stream_read.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "mem_word_write"
+path = "fuzz_targets/mem_word_write.rs"
 test = false
 doc = false
