--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -38,3 +38,9 @@ name = "mem_word_write"
 path = "fuzz_targets/mem_word_write.rs"
 test = false
 doc = false
+
+[[bin]]
+name = "buffered_bit_stream_write"
+path = "fuzz_targets/buffered_bit_stream_write.rs"
+test = false
+doc = false
