--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.141"
 webgraph = {path="../"}
