--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -11,3 +11,11 @@ rand = "0.8.5"
 random = "0.13.2"
 webgraph = {path="../"}
 rand_distr = "0.4.3"
+
+[profile.release]
+opt-level = 3             # like --release
+lto = "fat"               # Full LTO
+overflow-checks = false   # Disable integer overflow checks.
+debug = false             # Include debug info.
+debug-assertions = false  # Enables debug assertions.
+codegen-units=1           # slower compile times, but maybe better perf
