--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -14,6 +14,9 @@ rand_distr = "0.4.3"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.141"
 
+[features]
+rtdsc = []
+
 [profile.release]
 opt-level = 3             # like --release
 lto = "fat"               # Full LTO
