added coverage.py which collect the coverage from tests and fuzz targets and creates a report

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -41,6 +41,6 @@ doc = false
 
 [[bin]]
 name = "mem_word_write_vec"
-path = "fuzz_targets/mem_word_write_vec"
+path = "fuzz_targets/mem_word_write_vec.rs"
 test = false
 doc = false
