added support for no_std and alloc enviorments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,12 @@ keywords = ["graph", "compression", "codes", "webgraph"]
 categories = ["compression", "data-structures"]
 
 
+[features]
+default = ["std"]
+std = ["alloc", "anyhow/std"]
+alloc = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.70"
+anyhow = { version = "1.0.70", default-features = false }
