--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,12 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose --target x86_64-unknown-linux-gnu
+    - name: Run tests on std
+      run: cargo test --verbose --target x86_64-unknown-linux-gnu --no-default-features --features std
+    - name: Run tests on alloc
+      run: cargo test --verbose --target x86_64-unknown-linux-gnu --no-default-features --features alloc
+    - name: Run tests on no_std
+      run: cargo test --verbose --target x86_64-unknown-linux-gnu --no-default-features
     - name: Run clippy
       run: cargo clippy -- -Dclippy::all -Dclippy::cargo
     - name: Test with Miri in little endian
