--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Addind baremetal arm target
+      run: rustup target add aarch64-unknown-none
     - name: Install Miri
       run: |
         rustup toolchain install nightly --component miri clippy
@@ -28,7 +30,7 @@ jobs:
     - name: Run tests on alloc
       run: cargo test --verbose --target x86_64-unknown-linux-gnu --no-default-features --features alloc
     - name: Run tests on no_std
-      run: cargo test --verbose --target x86_64-unknown-linux-gnu --no-default-features
+      run: cargo test --verbose --target aarch64-unknown-none --no-default-features
     - name: Run clippy
       run: cargo clippy -- -Dclippy::all -Dclippy::cargo
     - name: Test with Miri in little endian
