--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ alloc = []
 
 [dependencies]
 anyhow = { version = "1.0.70", default-features = false }
+log = "0.4.17"
+stderrlog = "0.5.4"
 sux = {git = "https://github.com/vigna/sux-rs"}
 
 [dev-dependencies]
