--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ sux = {git = "https://github.com/vigna/sux-rs"}
 clap = { version = "4.1.6", features = ["derive"] }
 java-properties = "1.4.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
+mmap-rs = "0.5.0"
 
 [profile.release] # Used for the examples
 opt-level = 3             # like --release
