--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ alloc = []
 [dependencies]
 anyhow = { version = "1.0.70", default-features = false }
 log = "0.4.17"
+num-format = "0.4.4"
 pluralizer = "0.4.0"
 stderrlog = "0.5.4"
 sux = {git = "https://github.com/vigna/sux-rs"}
