--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ java-properties = "1.4.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
 mmap-rs = "0.5.0"
 bitvec = "1.0.1"
+dsi-progress-logger = "0.1.0"
 
 [dev-dependencies]
 
