--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ stderrlog = "0.5.4"
 rand = { version = "0.8.5", features = ["small_rng"] }
 voracious_radix_sort = {version="1.2.0", features = ["voracious_multithread"]}
 rayon = "1.7.0"
+tournament-kway = { git = "https://github.com/vigna/tournament", branch = "expose_comparators" }
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["small_rng"] }
