--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 opt-level = 3             # like --release
 lto = "fat"               # Full LTO
 overflow-checks = false   # Disable integer overflow checks.
-debug = false             # Include debug info.
+debug = true              # Include debug info.
 debug-assertions = false  # Enables debug assertions.
 codegen-units=1           # slower compile times, but maybe better perf
 
