--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,8 @@ dsi-progress-logger = "0.1.0"
 log = "0.4.17"
 stderrlog = "0.5.4"
 rand = { version = "0.8.5", features = ["small_rng"] }
-voracious_radix_sort = {version="1.2.0", features = ["voracious_multithread"]}
 rayon = "1.7.0"
-tournament-kway = { git = "https://github.com/vigna/tournament", branch = "expose_comparators" }
+itertools = "0.10.5"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["small_rng"] }
