--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ stderrlog = "0.5.4"
 rand = { version = "0.8.5", features = ["small_rng"] }
 rayon = "1.7.0"
 itertools = "0.10.5"
+tempfile = "3.5.0"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["small_rng"] }
