added utility to create elias fano from offsets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,5 +56,9 @@ name = "wg-offsets"
 path = "src/build_offsets.rs"
 
 [[bin]]
+name = "wg-ef"
+path = "src/build_eliasfano.rs"
+
+[[bin]]
 name = "wg-ascii"
 path = "src/ascii_convert.rs"
