--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 rayon = "1.7.0"
 tempfile = "3.5.0"
 itertools = "0.10.5"
+bytemuck = "1.13.1"
 
 [build-dependencies]
 cc = "1.0.79"
