--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ std = ["alloc", "anyhow/std"]
 alloc = []
 slow_tests = []
 skips = []
+fuzz = ["dep:arbitrary", "dep:zip", "dsi-bitstream/fuzz"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -38,6 +39,8 @@ rayon = "1.7.0"
 tempfile = "3.5.0"
 itertools = "0.10.5"
 bytemuck = "1.13.1"
+arbitrary = { version = "1", features = ["derive"], optional = true }
+zip = {version="0.6.6", optional=true}
 
 [build-dependencies]
 cc = "1.0.79"
