--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ mmap-rs = "0.5.0"
 bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.15.0"
 sux = {git = "https://github.com/vigna/sux-rs"}
-dsi-bitstream = {path="../dsi-bitstream-rs"}#{git = "https://github.com/vigna/dsi-bitstream-rs"}
+dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs"}
 # Bin dependancies
 clap = { version = "4.1.6", features = ["derive"] }
 dsi-progress-logger = "0.1.0"
