--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ itertools = "0.10.5"
 bytemuck = "1.13.1"
 arbitrary = { version = "1", features = ["derive"], optional = true }
 zip = {version="0.6.6", optional=true}
+libc = "0.2.147"
 
 [build-dependencies]
 cc = "1.0.79"
