--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ java-properties = "1.4.1"
 mmap-rs = "0.5.0"
 bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.15.0"
+epserde = {git = "https://github.com/vigna/epserde-rs"}
 sux = {git = "https://github.com/vigna/sux-rs"}
 dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs"}
 # Bin dependancies
