--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ bindgen = "0.65.1"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["small_rng"] }
+env_logger = "0.9.0"
 
 [profile.release] # Used for the examples
 opt-level = 3             # like --release
