--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ java-properties = "1.4.1"
 mmap-rs = "0.5.0"
 bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.15.0"
-epserde = {git = "https://github.com/vigna/epserde-rs"}
-sux = {git = "https://github.com/vigna/sux-rs"}
+epserde = {git = "https://github.com/vigna/epserde-rs", branch="align_of"}
+sux = {git = "https://github.com/vigna/sux-rs", branch="havoc"}
 dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs"}
 # Bin dependancies
 clap = { version = "4.1.6", features = ["derive"] }
