--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ zip = {version="0.6.6", optional=true}
 libc = "0.2.147"
 itertools = "0.11.0"
 nougat = "0.2.4"
+hrtb-lending-iterator = "0.1.0"
 
 [build-dependencies]
 cc = "1.0.79"
