--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ mmap-rs = "0.5.0"
 bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.15.0"
 epserde = "0.1.1"
-sux = {git = "https://github.com/vigna/sux-rs", branch="havoc"}
+sux = {git = "https://github.com/vigna/sux-rs"}
 dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs", branch="traits"}
 # Bin dependancies
 clap = { version = "4.1.6", features = ["derive"] }
@@ -45,8 +45,8 @@ zip = {version="0.6.6", optional=true}
 libc = "0.2.147"
 itertools = "0.11.0"
 nougat = "0.2.4"
-hrtb-lending-iterator = "0.1.0"
-
+#hrtb-lending-iterator = "0.1.0"
+hrtb-lending-iterator = { git = "https://github.com/vigna/hrtb-lending-iterator-rs" }
 [build-dependencies]
 cc = "1.0.79"
 bindgen = "0.65.1"
