--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,7 @@ zip = {version="0.6.6", optional=true}
 libc = "0.2.147"
 itertools = "0.11.0"
 nougat = "0.2.4"
-#lender = "0.1.7"
-lender = {git = "https://github.com/WanderLanz/Lender"}
+lender = "0.2.0"
 [build-dependencies]
 cc = "1.0.79"
 bindgen = "0.65.1"
