--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ libc = "0.2.147"
 itertools = "0.11.0"
 nougat = "0.2.4"
 lender = "0.2.0"
+common_traits = "0.10.0"
 
 [build-dependencies]
 cc = "1.0.79"
