--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ mmap-rs = "0.5.0"
 bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.15.0"
 epserde = "0.2.0"
-sux = {git = "https://github.com/vigna/sux-rs" }
+sux = "0.1"
 dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs" }
 # Bin dependancies
 clap = { version = "4.1.6", features = ["derive"] }
