--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,9 @@ zip = {version="0.6.6", optional=true}
 libc = "0.2.147"
 itertools = "0.11.0"
 nougat = "0.2.4"
-lender = "0.2.0"
+lender = { path = "../Lender" }
 common_traits = "0.10.0"
+webgraph-derive = { path = "../webgraph-derive" }
 
 [build-dependencies]
 cc = "1.0.79"
