--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ zip = {version="0.6.6", optional=true}
 libc = "0.2.147"
 itertools = "0.11.0"
 nougat = "0.2.4"
-lender = {git="https://github.com/WanderLanz/Lender"} #{ path = "../Lender" }
+lender = "0.2.2"
 common_traits = "0.10.0"
 #webgraph-derive = { path = "../webgraph-derive" }
 
