--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ itertools = "0.11.0"
 nougat = "0.2.4"
 lender = "0.2.2"
 common_traits = "0.10.0"
+impl-tools = "0.10.0"
 #webgraph-derive = { path = "../webgraph-derive" }
 
 [dev-dependencies]
