--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ categories = ["compression", "data-structures"]
 
 
 [features]
+default = []
 slow_tests = []
 skips = []
+be_bins = []
+le_bins = []
 fuzz = ["dep:arbitrary", "dep:zip", "dsi-bitstream/fuzz"]
 
 [dependencies]
@@ -23,7 +26,7 @@ bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.15.0"
 epserde = "0.2.0"
 sux = "0.1"
-dsi-bitstream = "0.1.3"
+dsi-bitstream = {path = "../dsi-bitstream-rs"} #"0.1.5"
 # Bin dependancies
 clap = { version = "4.1.6", features = ["derive"] }
 dsi-progress-logger = "0.2.0"
