--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.16.0"
 epserde = "0.3.1"
 sux = "0.1.3"
-dsi-bitstream = "0.1.7"
-#dsi-bitstream = { path = "../dsi-bitstream-rs" }
+#dsi-bitstream = "0.1.7"
+dsi-bitstream = { path = "../dsi-bitstream-rs" }
 clap = { version = "4.4.18", features = ["derive"] }
 dsi-progress-logger = "0.2.2"
 log = "0.4.20"
