--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ common_traits = "0.10.0"
 impl-tools = "0.10.0"
 bitflags = "2.4.2"
 dary_heap = "0.3.6"
+rdst = "0.20.12"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["small_rng"] }
