--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ impl-tools = "0.10.0"
 bitflags = "2.4.2"
 dary_heap = "0.3.6"
 rdst = "0.20.12"
+sealed = "0.5.0"
 
 [dev-dependencies]
 rand = { version = "0.8.5", features = ["small_rng"] }
