--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ common_traits = "0.10.0"
 impl-tools = "0.10.0"
 bitflags = "2.4.2"
 dary_heap = "0.3.6"
-rdst = "0.20.12"
+rdst = { version  ="0.20.12", features = ["multi-threaded"] }
 sealed = "0.5.0"
 
 [dev-dependencies]
