--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ epserde = "0.4.0"
 sux = "0.2.0"
 dsi-bitstream = "0.2.2"
 clap = { version = "4.4.18", features = ["derive"] }
+clap_complete = "4.4.10"
 dsi-progress-logger = "0.2.2"
 log = "0.4.20"
 stderrlog = "0.5.4"
