--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ num_cpus = "1.16.0"
 epserde = "0.4.0"
 sux = "0.2.0"
 dsi-bitstream = "0.2.2"
-clap = { version = "4.4.18", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive", "string"] }
 clap_complete = "4.4.10"
 dsi-progress-logger = "0.2.2"
 log = "0.4.20"
