--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ mmap-rs = "0.6.1"
 bitvec = { version = "1.0.1", features = ["atomic"] }
 num_cpus = "1.16.0"
 epserde = "0.4.0"
-sux = "0.2.0"
+#sux = "0.2.0"
+sux = {git = "https://github.com/vigna/sux-rs"}
 dsi-bitstream = "0.2.2"
 clap = { version = "4.4.18", features = ["derive", "string"] }
 clap_complete = "4.4.10"
