LLP module compiles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,11 +55,11 @@ zip = {version="0.6.6", optional=true}
 
 [profile.release] # Used for the examples
 opt-level = 3             # like --release
-lto = "fat"               # Full LTO
+#lto = "fat"               # Full LTO
 overflow-checks = false   # Disable integer overflow checks.
 debug = true              # Include debug info.
 debug-assertions = false  # Enables debug assertions.
-codegen-units=1           # slower compile times, but maybe better perf
+#codegen-units=1           # slower compile times, but maybe better perf
 
 [lib]
 name = "webgraph"
