--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ env_logger = {version = "0.11.0", optional = true}
 # Fuzzing deps
 arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
 zip = {version="0.6.6", optional=true}
+predicates = "3.1.0"
 
 
 [profile.release] # Used for the examples
