--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,7 @@ java-properties = "2.0.0"
 mmap-rs = "0.6.1"
 num_cpus = "1.16.0"
 epserde = "0.4.0"
-#sux = "0.2.0"
-sux = {git = "https://github.com/vigna/sux-rs"}
+sux = "0.3.1"
 dsi-bitstream = "0.4.0"
 dsi-progress-logger = "0.2.2"
 log = "0.4.20"
