--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,8 @@ arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
 zip = {version="0.6.6", optional=true}
 predicates = "3.1.0"
 
+[dev-dependencies]
+grid_gen = {git="https://github.com/zommiommy/gridgen.git"}
 
 [profile.release] # Used for the examples
 opt-level = 3             # like --release
