--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
 zip = {version="0.6.6", optional=true}
 predicates = "3.1.0"
 sysinfo = "0.30.8"
+mem_dbg = "0.1.5"
 
 
 [profile.release] # Used for the examples
