--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,8 @@ zip = {version="0.6.6", optional=true}
 predicates = "3.1.0"
 sysinfo = "0.30.8"
 
+[build-dependencies]
+built = { version = "0.7", features= ["git2"] }
 
 [profile.release] # Used for the examples
 opt-level = 3             # like --release
