--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ anyhow = { version = "1.0.79", features=["backtrace"]}
 java-properties = "2.0.0"
 mmap-rs = "0.6.1"
 num_cpus = "1.16.0"
-epserde = "0.5.1"
-sux = "0.3.2"
-dsi-bitstream = "0.4.2"
+epserde = "0.6.1"
+sux = {git = "https://github.com/vigna/sux-rs.git"}
+dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs.git"}
 dsi-progress-logger = "0.2.4"
 log = "0.4.20"
 rand = { version = "0.8.5", features = ["small_rng"] }
@@ -33,7 +33,7 @@ rayon = "1.8.1"
 tempfile = "3.5.0"
 bytemuck = "1.14.0"
 libc = "0.2.147"
-itertools = "0.12.0"
+itertools = "0.13.0"
 lender = "0.2.9"
 common_traits = "0.10.0"
 impl-tools = "0.10.0"
@@ -49,7 +49,7 @@ env_logger = {version = "0.11.0", optional = true}
 
 # Fuzzing deps
 arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
-zip = {version="0.6.6", optional=true}
+zip = {version="2.1.3", optional=true}
 predicates = "3.1.0"
 sysinfo = "0.30.8"
 mem_dbg = "0.1.5"
