--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,9 @@ java-properties = "2.0.0"
 mmap-rs = "0.6.1"
 num_cpus = "1.16.0"
 epserde = "0.6.1"
+mem_dbg = {version="0.2.2", features=["mmap-rs", "rand"]}
 sux = {git = "https://github.com/vigna/sux-rs.git"}
-dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs.git"}
+dsi-bitstream = {git = "https://github.com/vigna/dsi-bitstream-rs.git", features=["mem_dbg"]}
 dsi-progress-logger = "0.2.4"
 log = "0.4.20"
 rand = { version = "0.8.5", features = ["small_rng"] }
@@ -52,7 +53,6 @@ arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
 zip = {version="2.1.3", optional=true}
 predicates = "3.1.0"
 sysinfo = "0.30.8"
-mem_dbg = "0.1.5"
 
 [build-dependencies]
 built = { version = "0.7", features= ["chrono", "git2"] }
