--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,16 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Adding baremetal arm target
-        run: rustup target add aarch64-unknown-none
       - name: Check formatting
         run: cargo fmt -- --check
-      - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose --target x86_64-unknown-linux-gnu
       - name: Run clippy
         run: cargo clippy #-- -Dclippy::all -Dclippy::cargo
+      - name: Run tests
+        run: cargo test --verbose
 
   coverage:
     needs: build
