--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,18 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+n#.idea/
+
+*.offsets
+*.properties
+*.graph
+*.labeloffsets
+*.ef
+*.perm
+*.dcf
+*.obl
+*.labels
+err
+lcov.info
+
+TODO
