Replace anyhow::Error with enums in bvgraph::load
This allows crates using epserde to unwrap errors and `match` them.

In my case, I would like to display a custom message on WrongTypeHash/VersionMismatch with
instructions to regenerate files with the current epserde version.
Currently this is not enough for this use case (because epserde still
returns anyhow::Error), but a similar change will go to epserde.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ fuzz = ["dep:arbitrary", "dep:zip", "dsi-bitstream/fuzz"] # Expose the fuzzing h
 
 [dependencies]
 anyhow = { version = "1.0.79", features=["backtrace"]}
+thiserror = "1.0.63"
 java-properties = "2.0.0"
 mmap-rs = "0.6.1"
 num_cpus = "1.16.0"
