--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,11 +58,11 @@ built = { version = "0.7", features= ["chrono", "git2"] }
 
 [profile.release] # Used for the examples
 opt-level = 3             # like --release
-#lto = "fat"               # Full LTO
+lto = "fat"               # Full LTO
 overflow-checks = false   # Disable integer overflow checks.
 debug = true              # Include debug info.
 debug-assertions = false  # Enables debug assertions.
-#codegen-units=1           # slower compile times, but maybe better perf
+codegen-units=1           # slower compile times, but maybe better perf
 
 [lib]
 name = "webgraph"
