--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
 zip = {version="2.1.5", optional=true}
 predicates = "3.1.2"
 sysinfo = "0.30.13"
+sync-cell-slice = "0.9.9"
 
 [build-dependencies]
 built = { version = "0.7", features= ["chrono", "git2"] }
