--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ fuzz = [
 	"dep:zip",
 	"dsi-bitstream/fuzz",
 ] # Expose the fuzzing harnesses
+serde = ["dep:serde"]
 
 [dependencies]
 anyhow = { version = "1.0.79", features = ["backtrace"] }
@@ -50,6 +51,7 @@ bitflags = "2.6.0"
 dary_heap = "0.3.6"
 rdst = { version = "0.20.14", features = ["multi-threaded"] }
 sealed = "0.5.0"
+serde = { version = "1.0.217", optional = true }
 
 # Cli
 clap = { version = "4.5.11", features = ["derive", "string"], optional = true }
