--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ bitflags = "2.6.0"
 dary_heap = "0.3.6"
 rdst = { version = "0.20.14", features = ["multi-threaded"] }
 sealed = "0.5.0"
-serde = { version = "1.0.217", optional = true }
+serde = { version = "1.0.217", features = ["serde_derive"], optional = true }
 
 # Cli
 clap = { version = "4.5.11", features = ["derive", "string"], optional = true }
@@ -64,6 +64,10 @@ zip = { version = "2.1.5", optional = true }
 predicates = "3.1.2"
 sysinfo = "0.30.13"
 sync-cell-slice = "0.9.9"
+
+[dev-dependencies]
+serde = "1.0.217"
+serde_json = "1.0.137"
 
 [build-dependencies]
 built = { version = "0.7", features = ["chrono", "git2"] }
