removed timestamp from build info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ serde = "1.0.217"
 serde_json = "1.0.137"
 
 [build-dependencies]
-built = { version = "0.7", features = ["chrono", "git2"] }
+built = { version = "0.7", features = ["git2"] }
 
 [profile.release]
 opt-level = 3            # like --release
