--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ serde_json = "1.0.137"
 
 [build-dependencies]
 built = { version = "0.7", features = ["git2"] }
+chrono = "0.4.40"
 
 [profile.release]
 opt-level = 3            # like --release
