--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,8 @@ num_cpus = "1.16.0"
 epserde = "0.8.0"
 sux = "0.6.0"
 #dsi-bitstream = {git="https://github.com/vigna/dsi-bitstream-rs.git"}
-dsi-bitstream = { path="../dsi-bitstream-rs" }
+#dsi-bitstream = { path="../dsi-bitstream-rs" }
+dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
 log = "0.4.22"
 rand = { version = "0.9.0", features = ["small_rng"] }
