--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ sync-cell-slice = "0.9.9"
 
 [dev-dependencies]
 serde = "1.0.217"
+serde_json = "1.0.137"
 
 [build-dependencies]
 built = { version = "0.7", features = ["git2"] }
