--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ java-properties = "2.0.0"
 mmap-rs = "0.6.1"
 num_cpus = "1.16.0"
 epserde = "0.8.0"
-sux = "0.6.0"
+sux = "0.7.2"
 #dsi-bitstream = {git="https://github.com/vigna/dsi-bitstream-rs.git"}
 #dsi-bitstream = { path="../dsi-bitstream-rs" }
 dsi-bitstream = "0.5.0"
@@ -56,7 +56,7 @@ crossbeam-channel = "0.5"
 # Cli
 clap = { version = "4.5.11", features = ["derive", "string"], optional = true }
 clap_complete = { version = "4.4.11", optional = true }
-env_logger = { version = "0.11.5", optional = true }
+env_logger = { version = "0.11.5", default-features = false, optional = true, features = ["auto-color", "regex"] }
 
 # Fuzzing deps
 arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
@@ -64,6 +64,7 @@ zip = { version = "2.1.5", optional = true }
 predicates = "3.1.2"
 sysinfo = "0.33.1"
 sync-cell-slice = "0.9.9"
+jiff = "0.2.5"
 
 [dev-dependencies]
 serde = "1.0.217"
