--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ jiff = "0.2.5"
 [dev-dependencies]
 serde = "1.0.217"
 serde_json = "1.0.137"
+env_logger = { version = "0.11.5" }
 
 [build-dependencies]
 built = { version = "0.7", features = ["git2"] }
