--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rayon = "1.10.0"
 mmap-rs = "0.6.1"
 predicates = "3.1.2"
 java-properties = "2.0.0"
+env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "regex"] }
 
 [profile.release]
 opt-level = 3            # like --release
