--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,7 +23,7 @@ java-properties.workspace = true
 
 clap = { version = "4.5.11", features = ["derive", "string"] }
 clap_complete = { version = "4.4.11" }
-env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "regex"] }
+env_logger.workspace = true
 jiff = "0.2.5"
 sysinfo = "0.33.1"
 
