--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ mmap-rs = "0.6.1"
 predicates = "3.1.2"
 java-properties = "2.0.0"
 env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "regex"] }
+clap = { version = "4.5.11", features = ["derive", "string"] }
 
 [profile.release]
 opt-level = 3            # like --release
