--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "webgraph_algo"
-version = "0.1.0"
+name = "webgraph-algo"
+version = "0.1.1"
 edition = "2024"
 description = "Algorithms for the Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
 repository = "https://github.com/vigna/webgraph-rs/"
