made 'build ef' work with non-padded offset files and it writes first to a temporary file which is then renamed

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,11 @@ authors = [
 	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
 	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
 ]
+description = "Command line interfact of for the Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
+license = "Apache-2.0 OR LGPL-2.1-or-later"
+readme = "README.md"
+keywords = ["graph", "compression", "codes", "webgraph"]
+categories = ["compression", "data-structures", "algorithms", "cli"]
 
 [dependencies]
 webgraph.workspace = true
