--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -27,3 +27,6 @@ anyhow.workspace = true
 dsi-progress-logger.workspace = true
 no-break = "0.1.2"
 lender = "0.3.1"
+
+[dev-dependencies]
+rand.workspace = true
