--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -15,6 +15,8 @@ authors = [
 ]
 
 [dependencies]
+counter-array = { path = "../../counter-array-rs" }
+
 nonmax = "0.5.5"
 rayon.workspace = true
 sealed = "0.6.0"
@@ -27,6 +29,12 @@ anyhow.workspace = true
 dsi-progress-logger.workspace = true
 no-break = "0.1.2"
 lender = "0.3.1"
-
+webgraph-cli = { version = "0.1.0", path = "../cli" }
+rand.workspace = true
+kahan = "0.1.4"
+epserde.workspace = true
 [dev-dependencies]
 rand.workspace = true
+
+[features]
+slow_tests = []
