--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -15,26 +15,25 @@ authors = [
 ]
 
 [dependencies]
-counter-array = { path = "../../counter-array-rs" }
+counter-array.workspace = true
+webgraph-cli.workspace = true
+webgraph.workspace = true
+dsi-progress-logger.workspace = true
+sux.workspace = true
+epserde.workspace = true
+lender.workspace = true
+
+rand.workspace = true
+anyhow.workspace = true
+rayon.workspace = true
+sync-cell-slice.workspace = true
 
 nonmax = "0.5.5"
-rayon.workspace = true
 sealed = "0.6.0"
-sux.workspace = true
 thiserror = "2.0.12"
 parallel_frontier = "0.1.0"
-webgraph.workspace = true
-sync-cell-slice = "0.9.11"
-anyhow.workspace = true
-dsi-progress-logger.workspace = true
 no-break = "0.1.2"
-lender = "0.3.1"
-webgraph-cli = { version = "0.1.0", path = "../cli" }
-rand.workspace = true
 kahan = "0.1.4"
-epserde.workspace = true
-[dev-dependencies]
-rand.workspace = true
 
 [features]
 slow_tests = []
