--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -34,6 +34,7 @@ log.workspace = true
 sux.workspace = true
 common_traits.workspace = true
 lender.workspace = true
+
 rand.workspace = true
 tempfile.workspace = true
 itertools.workspace = true
@@ -41,7 +42,8 @@ rayon.workspace = true
 mmap-rs.workspace = true
 predicates.workspace = true
 java-properties.workspace = true
-arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
+sync-cell-slice.workspace = true
+arbitrary = { workspace = true, optional = true }
 
 num_cpus = "1.16.0"
 libc = "0.2.155"
@@ -50,16 +52,15 @@ bitflags = "2.6.0"
 dary_heap = "0.3.6"
 rdst = { version = "0.20.14", features = ["multi-threaded"] }
 sealed = "0.6.0"
-serde = { version = "1.0.217", features = ["serde_derive"], optional = true }
+serde = { workspace = true, optional = true }
 crossbeam-channel = "0.5"
 
 # Fuzzing deps
 zip = { version = "2.1.5", optional = true }
-sync-cell-slice = "0.9.9"
 
 [dev-dependencies]
-serde = "1.0.217"
-serde_json = "1.0.137"
+serde.workspace = true
+serde_json.workspace = true
 env_logger.workspace = true
 clap.workspace = true
 
