--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -15,7 +15,7 @@ authors = [
 ]
 
 [dependencies]
-counter-array.workspace = true
+card-est-array.workspace = true
 webgraph-cli.workspace = true
 webgraph.workspace = true
 dsi-progress-logger.workspace = true
