--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = ["algo", "cli", "webgraph"]
 webgraph = { path = "./webgraph", version = "0.2.1" }
 webgraph-algo = { path = "./algo", version = "0.1.0" }
 webgraph-cli = { path = "./cli" }                      # TODO!: publish
-card-est-array = { path = "../card-est-array-rs" }     # TODO!: publish 
+card-est-array = "0.1.0"
 epserde = "0.8.0"
 dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
