--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,20 @@ resolver = "2"
 members = ["algo", "cli", "webgraph"]
 
 [workspace.dependencies]
-webgraph = { path = "./webgraph", version = "0.2.1" }
-webgraph-algo = { path = "./algo", version = "0.1.0" }
-webgraph-cli = { path = "./cli" }                      # TODO!: publish
+webgraph = {path="./webgraph", version="0.2.1"}
+webgraph-algo = {path="./algo", version="0.1.0"}
+webgraph-cli = {path="./cli", version="0.1.0"}
+
 card-est-array = "0.1.0"
 epserde = "0.8.0"
 dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
 sux = "0.7.2"
 common_traits = "0.11.2"
+lender = "0.3.1"
+log = "0.4.22"
 
 anyhow = { version = "1.0.79", features = ["backtrace"] }
-log = "0.4.22"
-lender = "0.3.1"
 rand = { version = "0.9.0", features = ["small_rng"] }
 tempfile = "3.10.1"
 itertools = "0.14.0"
